Переделана логика ongoing, уведомления о релизах, в некоторых местах оптимизирована логика
