# internal/entity/dto/ongoing_content.go
@@ -1,19 +1,7 @@
 package dto
 
-import "time"
-
-type PreviewOngoingContent struct {
-	ID          int       `json:"id"          example:"1"`
-	Title       string    `json:"title"       example:"Бэтмен"`
-	Genres      []string  `json:"genre"       example:"Боевик"`
-	Poster      string    `json:"poster"      example:"/static/poster.jpg"`
-	ReleaseDate time.Time `json:"releaseDate" example:"2022-01-02T15:04:05Z"`
-
-	Type string `json:"type" example:"movie"`
-}
-
 type PreviewOngoingContentList struct {
-	OnGoingContentList []*PreviewOngoingContent `json:"ongoing_content_list"`
+	OnGoingContentList []*PreviewContent `json:"ongoing_content_list"`
 }
 
 type ReleaseYearsResponse struct {
@@ -21,5 +9,5 @@ type ReleaseYearsResponse struct {
 }
 
 type IsOngoingContentFinishedResponse struct {
-	IsFinished bool `json:"is_finished" example:"true"`
+	IsReleased bool `json:"is_released" example:"true"`
 }
