# internal/entity/dto/search.go
@@ -1,6 +1,6 @@
 package dto
 
 type SearchResult struct {
-	Content []PreviewContent         `json:"content"`
-	Persons []PersonPreviewWithPhoto `json:"persons"`
+	Content []*PreviewContent         `json:"content"`
+	Persons []*PersonPreviewWithPhoto `json:"persons"`
 }
